--- a/html-fundme-fcc/index.html
+++ b/html-fundme-fcc/index.html
@@ -8,9 +8,15 @@
   </head>
 
   <body>
-    Connect to Metamask
+    Fund Me
     <script src="./index.js" type="module"></script>
-    <button id="connectButton">Connect to Metamask</button>
+    <button id="connectButton">Connect</button>
     <button id="fundButton">Fund</button>
+    <button id="getBalance">Get Balance</button>
+    <button id="withdrawButton">Withdraw</button>
+    <!--form-->
+    <label for="fund">ETH Amount</label>
+    <input id="ethAmount" placeholder="0.1" />
+    <!--form-->
   </body>
 </html>
